{{$NEXT}}

1.34   2016-07-06

- Added the leap second coming on December 31, 2016.


1.33   2016-06-29

- Fixed the $dt->set docs to say that you cannot pass a locale (even though
  you can but you'll get a warning) and added more docs for $dt->set_locale.

- Require DateTime::Locale 1.05.

- Require DateTime::TimeZone 2.00.


1.32   2016-06-28

- This release *does not* include any of the changes in the 1.29-1.30 TRIAL
  releases.

- When you pass a locale to $dt->set you will now get a warning suggesting you
  should use $dt->set_locale instead. If you have DateTime::Format::Mail
  installed you should upgrade to 0.0403 or later, since that module will
  trigger this warning.

- Added support for $dt->truncate( to => 'quarter' ). Implemented by Michael
  Conrad. GitHub #17.


1.31   2016-06-18 (TRIAL RELEASE)

- When you pass a locale to $dt->set you will now get a warning suggesting you
  should use $dt->set_locale instead. The previous trial releases didn't allow
  locale to be passed at all, which broke a lot of modules. I've sent PRs, but
  for now the parameter should be allowed (but discouraged). Reported by
  Slaven Resic. RT #115420.


1.30   2016-06-18 (TRIAL RELEASE)

- Require the latest version of Params::CheckCompiler (0.06). Tests failed
  with 0.01.


1.29   2016-06-17 (TRIAL RELEASE)

- Replaced Params::Validate with Params::CheckCompiler and Specio. In my
  benchmarks this makes constructing a new DateTime object about 14%
  faster. However, it slows down module load time by about 100 milliseconds
  (1/10 of a second) on my desktop system with a primed cache (so really
  measuring compile time, not disk load time).


1.28   2016-05-21

- Fixed handling of some floating point epochs. Because DateTime treated the
  epoch like a string instead of a number, certain epochs with a non-integer
  value ended up treated like integers (Perl is weird). Patch by Christian
  Hansen. GitHub #15. This also addresses the problem that GitHub #6 brought
  up.

